<resources>
    <string name="app_name">Finance Up</string>
    <string name="welcome_message_home">Bem-vindo \uD83D\uDC4B</string>
    <string name="current_balance">R$ 1.250,00</string>
    <string name="buy_card_text">Adicionar Compra</string>
    <string name="check_expenses_card_title">Gráficos</string>
    <string name="financial_goals_card_title">Metas</string>
    <string name="fixed_bills_card_title">Contas</string>
    <string name="title_home_navbar">Home</string>
    <string name="title_profile_navbar">Profile</string>
    <string name="pefil_title_card">Perfil</string>
    <string name="confing_card_title">Histórico</string>
    <string name="title_register_form">Registro</string>
    <string name="hint_input_name">Digite seu nome</string>
    <string name="hint_input_email">Digite o seu email</string>
    <string name="hint_input_password">Digite sua senha</string>
    <string name="text_button_register">Cadastrar</string>
    <string name="login_button_text">Login</string>
    <string name="login_title">Login</string>
    <string name="add_purchase_title">Adicionar Compra</string>
    <string name="recent_purchases_subtitle">Compras Recentes</string>
    <string name="pickup_date">Escolher Data</string>
    <string name="title_chart_page">Gráfico de Gastos</string>
    <string name="pickup_a_date_subtitle">Selecione uma data:</string>
    <string name="bar_chart">Barra</string>
    <string name="pie_chart">Pizza</string>
    <string name="line_chart">Linha</string>
    <string name="goal_page_title">Metas</string>
    <string name="profile_page_title">Informações do usuario</string>
    <string name="profile_page_subtitle">Alterar Dados</string>
    <string name="input_name_placeholder">Digite seu nome</string>
    <string name="nome">Nome</string>
    <string name="email_hint">E-mail</string>
    <string name="email_placeholder">Digite o novo e-mail</string>
    <string name="password_hint">Senha</string>
    <string name="password_placeholder">Digite a nova senha</string>
    <string name="salary_hint">Salário</string>
    <string name="salary_placeholder">Digite o novo salário</string>
    <string name="edit_button_text">Editar</string>
    <string name="copyright_message">2025© Todos os direitos reservados</string>
    <string name="register_button">Cadastre-se</string>
    <string name="initial_page_title">Cadastre-se ou realize o login</string>
    <string name="historical_title">Histórico</string>
    <string name="historical_page_subtitle">Compras realizadas</string>
    <string name="logout">Logout</string>
    <string name="name_input">Nome</string>
    <string name="salary_input_hint">Salário</string>
    <string name="salary_input_placeholder">Digite o seu salário</string>
    <string name="arrow_back_content_description">Flecha apontada para a esquerda</string>
    <string name="shopping_cart_content_description">Carrinho de compras</string>
    <string name="add_float_button_content_description">Ícone de adição com um símbole de soma no centro</string>
    <string name="bar_chart_content_description">Gráfico de barras</string>
    <string name="rocket_content_description">Foguete voando</string>
    <string name="subtitle_goal_page">Confira seu progresso!</string>
    <string name="list_content_description">Lista de itens</string>
    <string name="pork_icon_content_description">Porquinho de guardar dinheiro</string>
    <string name="login_icon_content_description">Ícone de login</string>
    <string name="save_data_checkbox">Salvar dados</string>
    <string name="stay_logged_checkbox">Manter logado</string>
    <string name="credit_card_content_description">Cartão de crédito</string>
    <string name="pie_chart_content_description">Gráfico de pizza</string>
    <string name="line_chart_content_description">Gráfico de linhas</string>
    <string name="person_icon_content_description">Ícone de uma pessoa</string>
    <string name="money_icon_content_description">Simbolo de dinheiro</string>
    <string name="logout_icon_content_description">íconde de logout</string>
    <string name="register_icon_content_description">Lápis e vários quadrados formando um triângulo</string>
    <string name="trash_remove_content_description">Ícone de uma lixeira para removação do item da lista</string>
    <string name="icon_pen_content_description">Lápis para realizar alterações no item da lista</string>
    <string name="add_button_list_content_description">Símbolo de adição para adicionar um novo item na lista.</string>
    <string name="add_new_purchase">Adicionar nova compra</string>
    <string name="product_form_hint">Produto</string>
    <string name="form_add_product_placeholder">Informe o produto comprado</string>
    <string name="price_hint_input">Preço</string>
    <string name="price_form_placeholder">Informe o preço do produto</string>
    <string name="category_form_hint">Categoria</string>
    <string name="add_button_dialog">Adicionar</string>
    <string name="cancel_button_dialog">Cancelar</string>
    <string name="add_new_goal_title_dialog">Adicionar nova meta</string>
    <string name="product_description_placeholder_goal_dialog">Informe o nome do produto</string>
    <string name="initial_quantity_dialog_goal">Quantidade inicial</string>
    <string name="initial_quantity_placeholder_goal_dialog">Informe a montante atual</string>
    <string name="final_quantity_goal_dialog">Quantidade final</string>
    <string name="final_quantity_placeholder_goal_dialog">Informe o valor final</string>
    <string name="add_quantity_dialog_goal_title">Adicionar quantia</string>
    <string name="quantity_hint">Quantia</string>
    <string name="quantity_placeholder">Informe a quantia</string>
    <string name="select_range_date">Selecione um intervalo de datas</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="buys_by_category">Gastos por categoria</string>
    <string name="goal_added_successfuly">Meta adicionada com sucesso.</string>
    <string name="goal_deleted_successfuly">Meta deletada com sucesso.</string>
    <string name="goal_updated_successfuly">Meta atualizada com sucesso.</string>
    <string name="goal_error_values">A meta final não pode ser menor do que a quantidade inicial.</string>
    <string name="goal_error_empty_informations">Adicione todas as informações da meta.</string>
    <string name="empty_quantity_error">Informe a quantidade.</string>
    <string name="user_registered_successfuly">Usuário registrado com Sucesso</string>
    <string name="login_failed">Erro ao realizar Login!</string>
    <string name="error_empty_values">Por favor insira todos os valores.</string>
    <string name="welcome_message">Bem-vindo,\n%1$s 👋</string>
    <string name="profile_updated_successfully">Perfil atualizado com sucesso!</string>
    <string name="email_already_registered_error">Esse email já está em uso.</string>
    <string name="add_all_product_informations_error">Adicione todas as informações do produto.</string>
    <string name="bill_added_successfully">Gasto adicionado com sucesso.</string>
    <string name="bill_deleted_successfuly">Gasto deletado com sucesso.</string>
    <string name="bill_updated_successfully">Gasto atualizado com sucesso.</string>
    <string name="fil_out_all_fields_error">Preencha todos os campos.</string>
    <string name="register_error">Não foi possível realizar o cadastro...</string>
    <string name="fill_out_all_fields_error">Preencha todos os campos...</string>
    <string name="edit_purchase">Editar compra</string>


    <string-array name="categories">
        <item>Eletrônicos</item>
        <item>Casa e Jardim</item>
        <item>Beleza e Cuidados Pessoais</item>
        <item>Moda e Acessórios</item>
        <item>Saúde e Bem-Estar</item>
        <item>Alimentos e Bebidas</item>
        <item>Automóveis e Peças</item>
        <item>Esportes e Lazer</item>
        <item>Livros e Mídia</item>
        <item>Brinquedos e Jogos</item>
        <item>Escritório e Papelaria</item>
        <item>Pet Shop</item>
        <item>Viagens e Turismo</item>
        <item>Serviços</item>
        <item>Outros</item>
    </string-array>

    <string-array name="type">
        <item>Fixa</item>
        <item>Variável</item>
    </string-array>
</resources>